--- a/C0reExternalBase_v2/C0reExternalBase_v2.csproj
+++ b/C0reExternalBase_v2/C0reExternalBase_v2.csproj
@@ -50,18 +50,22 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Math\Transformation.cs" />
     <Compile Include="RenderForm.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="RenderForm.Designer.cs">
       <DependentUpon>RenderForm.cs</DependentUpon>
     </Compile>
-    <Compile Include="Math\Vector.cs" />
+    <Compile Include="Structs\Vector.cs" />
     <Compile Include="Overlay\OverlayHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Render\Render.cs" />
     <Compile Include="Render\RenderHelper.cs" />
+    <Compile Include="Memory.cs" />
+    <Compile Include="Structs\Entity.cs" />
+    <Compile Include="Threads\Update.cs" />
+    <Compile Include="Variables\Offsets.cs" />
     <EmbeddedResource Include="RenderForm.resx">
       <DependentUpon>RenderForm.cs</DependentUpon>
     </EmbeddedResource>
@@ -88,6 +92,7 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
